# earthlings

./: .gitignore  Makefile  Makefile.am  Makefile.in  README.md  configure  configure.ac  main.c
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1  traces.2
headers/: fps.h  mainMenu.h  meteors.h  objects.h  process.h  render.h  startGame.h  stopGame.h
libs/: events.h  fps.h  meteors.h  objects.h  scanKey.h
src/: events.c  fps.c  mainMenu.c  meteors.c  process.c  render.c  scanKey.c  startGame.c  stopGame.c
